--- a/Scripts/ansible/playbook/AD_Delete_user.yml
+++ b/Scripts/ansible/playbook/AD_Delete_user.yml
@@ -4,8 +4,8 @@
   tasks:
     - name: Read users from CSV file and return a list
       community.general.read_csv:
-        path: deluser.csv
-        fieldnames: Nom,Prenom,Group,Account
+        path: AD_user.csv
+        fieldnames: Nom,Prenom,Group,Account,Path,Password,State
         delimiter: ';'
       register: userlist
       delegate_to: localhost
@@ -13,7 +13,7 @@
     - name: delete user
       ansible.windows.win_user:
         name: "{{ user.Account }}"
-        state: absent
+        state: "{{ user.State }}"
       loop: "{{ userlist.list }}"
       loop_control:
         loop_var: user
